Make PlayerCardDTO consistently return Card objects.